[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-paperbench"
version = "0.1.0"
description = "OpenEnv PaperBench Environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "scikit-learn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
